force-app/main/default/objects/Batch_Financial_Year_Split__c/Batch_Financial_Year_Split__c.object-meta.xml
<CustomObject>
    <description>Junction Object that allows FY Roll-up Summaries to be passed from Batch to Funding Disbursement</description>
    <label>Batch Financial Year Split</label>
    <nameField>
        <displayFormat>BATFYS-{000000}</displayFormat>
        <label>Batch Financial Year Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Financial Year Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>