force-app/main/default/objects/Batch_Financial_Year_Split__c/fields/Financial_Year_Start__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year_Start__c</fullName>
    <label>Financial Year Start</label>
    <type>Date</type>
</CustomField>