force-app/main/default/objects/Batch_Financial_Year_Split__c/fields/Funding_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Funding_Disbursement__c</fullName>
    <description>Master Detail to allow summaries on Disbursement Records</description>
    <label>Funding Disbursement</label>
    <referenceTo>FundingDisbursement</referenceTo>
    <relationshipLabel>Batch Financial Year Splits</relationshipLabel>
    <relationshipName>Batch_Financial_Year_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>