force-app/main/default/objects/Batch_Financial_Year_Split__c/fields/Funding_Used_in_Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Funding_Used_in_Financial_Year__c</fullName>
    <label>Funding Used in Financial Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>