force-app/main/default/objects/Batch_Financial_Year_Split__c/fields/Related_Batch__c.field-meta.xml
<CustomField>
    <fullName>Related_Batch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Batch that supplies the amount for summarising</description>
    <label>Related Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipLabel>Batch Financial Year Splits</relationshipLabel>
    <relationshipName>Batch_Financial_Year_Splits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>